src/test/ui/issues/issue-67552.stderr
error: reached the recursion limit while instantiating `rec::<&mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut &mut Empty>`
  --> $DIR/issue-67552.rs:27:9
   |
LL |         rec(identity(&mut it))
   |         ^^^^^^^^^^^^^^^^^^^^^^
   |
note: `rec` defined here
  --> $DIR/issue-67552.rs:20:1
   |
LL | / fn rec<T>(mut it: T)
LL | | where
LL | |     T: Iterator,
LL | | {
...  |
LL | |     }
LL | | }
   | |_^

error: aborting due to previous error

